<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/textViewTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/textViewTitle"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/radioButtonTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:text="@string/radioButtonTitle"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTittle"
        />

    <RadioGroup
        android:id="@+id/radioGroupMaleFemale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButtonTittle"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonText1"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonText2"/>

    </RadioGroup>

    <TextView
        android:id="@+id/checkBoxTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="12dp"
        android:text="@string/checkBoxTitle"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupMaleFemale"
        />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxTittle"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/checkBoxText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox1"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/checkBoxText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox2"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/checkBoxText4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox3"/>

</androidx.constraintlayout.widget.ConstraintLayout>